# video_ludo

./: .travis.yml  Cargo.toml  README.md
examples/: video_player.rs  video_player_raw.rs
examples/utils/: mod.rs
resources/: Ettore.ogv
src/: daemon_reader.rs  lib.rs  movie.rs  movie_reader.rs
src/stream_reader/: mod.rs  video_reader.rs
